--- a/okHttpClient/app/src/main/AndroidManifest.xml
+++ b/okHttpClient/app/src/main/AndroidManifest.xml
@@ -20,5 +20,5 @@
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 </manifest>
