--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 28
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.example.gridviewproject2"
         minSdk 25
-        targetSdk 28
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -20,6 +20,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures{
+        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
