--- a/ReminderProject/app/src/main/AndroidManifest.xml
+++ b/ReminderProject/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReminderProject">
         <activity
-            android:name=".EditActivity"
+            android:name=".activities.EditActivity"
             android:exported="false" />
         <activity
-            android:name=".CreateActivity"
+            android:name=".activities.InsertReminderActivity"
             android:exported="true"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
